--- a/source/2015-06-29-ninirb-13.html.markdown
+++ b/source/2015-06-29-ninirb-13.html.markdown
@@ -29,6 +29,9 @@ while talkers.any?
 end
 ```
 
+当日飛び入りでの発表もあり、わいわいがやがやと大変楽しい夜になりました。
+参加された方、発表された方、本当にありがとうございました。
+
 ## LT 資料一覧
 
 見つけられた LT 資料を載せておきます。
